--- a/OOPlab2/nbproject/project.properties
+++ b/OOPlab2/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=OOPlab2
 application.vendor=Jack
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -35,13 +36,19 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/OOPlab2
 endorsed.classpath=
 excludes=
+file.reference.jetty-util-9.4.25.v20191220.jar=..\\..\\jetty\\lib\\jetty-util-9.4.25.v20191220.jar
+file.reference.jetty-util-ajax-9.4.25.v20191220.jar=../../jetty/lib/jetty-util-ajax-9.4.25.v20191220.jar
 file.reference.servlet-api-3.1.jar=../../../serverlet/Jetty/lib/servlet-api-3.1.jar
 file.reference.start.jar=../../../serverlet/Jetty/start.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.start.jar}:\
-    ${file.reference.servlet-api-3.1.jar}
+    ${file.reference.servlet-api-3.1.jar}:\
+    ${file.reference.jetty-util-ajax-9.4.25.v20191220.jar}:\
+    ${file.reference.jetty-util-9.4.25.v20191220.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +61,8 @@ javac.source=13
 javac.target=13
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.testng.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
@@ -77,11 +85,28 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=OOPlab2
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=Main
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=Java13
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
